# dynamicRankings

./: CMakeLists.txt  LICENSE  Makefile  README.md  simulation.c
include/: inputOutput.c  inputOutput.h  setting.c  setting.h
include/rules/: dynDHondt.c  dynDHondt.h  lazyDHondt.c  lazyDHondt.h
